# adscite

./: LICENSE  README.md  pyproject.toml
adscite/: __init__.py  citekey.py  main.py
